# python-project-lvl2

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: README.md  python-ci.yml
gendiff/: __init__.py  cli.py  generate_diff.py  open_files.py
gendiff/scripts/: __init__.py  gendiff.py  generate_diff.py
tests/: __init__.py  test_diff_json.py  test_diff_yaml.py
tests/fixtures/: temp.py
