[tool.poetry]
authors = ["ramilabd <ramsmart@mail.ru>"]
description = "Difference calculator for yaml, json files."
license = "MIT"
name = "hexlet-code"
packages = [
  {include = "gendiff"},
]
version = "0.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
wemake-python-styleguide = "^0.15.2"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = [
  "tests",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
